--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
-    "jquery": "^3.3.1",
+    "jquery": ">=3.4.0",
     "react": "^16.5.2",
     "react-ace": "^6.2.0",
     "react-dom": "^16.5.2",
